--- a/app/templates/flags/colors-count.html
+++ b/app/templates/flags/colors-count.html
@@ -1,6 +1,34 @@
 {% extends "base.html" %}
 {% load i18n my_filter %}
 
+{% block breadcrumb %}
+<div class="pt-3">
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb" vocab="https://schema.org/" typeof="BreadcrumbList">
+                <li class="breadcrumb-item" property="itemListElement" typeof="ListItem">
+                    {# <a property="item" typeof="WebPage" href="{% url 'flags:flags-list' %}"> #}
+                    <a property="item" typeof="WebPage" href="{{ request.scheme }}://{{ request.META.HTTP_HOST }}">
+                        <span property="name">Главная</span>
+                    </a>
+                    <meta property="position" content="1">
+                </li>
+                <li class="breadcrumb-item" property="itemListElement" typeof="ListItem">
+                  <a property="item" typeof="WebPage"  href="{% url 'flags:colors-list' %}">
+                    <span property="name">Цвета флагов мира</span>
+                  </a>
+                  <meta property="position" content="2">
+                </li>
+                <li class="breadcrumb-item active" aria-current="page" property="itemListElement" typeof="ListItem">
+                    <span property="name">{{color_count}} {% if color_count > 4 %}цветов{% else %}цвета{% endif %}</span>
+                    <meta property="position" content="3">
+                </li>
+            </ol>
+        </nav>
+    </div>
+</div>
+{% endblock breadcrumb %}
+
 {% block content %}
   {# H1 #}
   <div class="pt-5 pb-3">
