--- a/app/templates/flags/region-list.html
+++ b/app/templates/flags/region-list.html
@@ -3,14 +3,23 @@
 
 {% block breadcrumb %}
 <div class="pt-3">
-  <div class="container">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'flags:flags-list' %}">Главная</a></li>
-        <li class="breadcrumb-item"><a href="{% url 'flags:regions-list' %}">Регионы мира</a></li>
-      </ol>
-    </nav>
-  </div>
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb" vocab="https://schema.org/" typeof="BreadcrumbList">
+                <li class="breadcrumb-item" property="itemListElement" typeof="ListItem">
+                    {# <a property="item" typeof="WebPage" href="{% url 'flags:flags-list' %}"> #}
+                    <a property="item" typeof="WebPage" href="{{ request.scheme }}://{{ request.META.HTTP_HOST }}">
+                        <span property="name">Главная</span>
+                    </a>
+                    <meta property="position" content="1">
+                </li>
+                <li class="breadcrumb-item active" aria-current="page" property="itemListElement" typeof="ListItem">
+                    <span property="name">Регионы мира</span>
+                    <meta property="position" content="2">
+                </li>
+            </ol>
+        </nav>
+    </div>
 </div>
 {% endblock breadcrumb %}
 
@@ -20,11 +29,12 @@
   <div class="container">
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
-        <h1>Регионы</h1>
+        <h1>Флаги стран разделенные по регионам мира</h1>
       </div>
     </div>
   </div>
 </div>
+{# Regions and subregions list #}
 <div class="py-3">
   <div class="container">
     <div class="row">
@@ -53,7 +63,6 @@
     </div>
   </div>
 </div>
-
 {% endblock content %}
 
 {# Begin SEO block #}
@@ -61,15 +70,15 @@
   {% block canonical %}{% url 'flags:regions-list' %}{% endblock canonical %}
 
   {# Meta title #}
-  {% block meta_title %}{% endblock meta_title %}
+  {% block meta_title %}Флаги стран разделенные по макрорегионам мира (по версии ООН){% endblock meta_title %}
 
   {# Meta description #}
-  {% block meta_description %}{% endblock meta_description %}
+  {% block meta_description %}
+    Список всех макрорегионов мира с субрегионами (по версии ООН). Флаги стран разделены по регионам. Краткое описание каждого региона и макрорегиона.
+  {% endblock meta_description %}
 
   {# Meta keywords #}
   {% block meta_keywords %}{% endblock meta_keywords %}
 
-  {% block meta_robots %}
-  noindex,follow
-  {% endblock meta_robots %}
+  {% block meta_robots %}all{% endblock meta_robots %}
 {# End SEO block #}
