--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -51,10 +51,10 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'flags:colors-list' %}">Цвета</a>
           </li>
-
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'about' %}">О проекте</a>
+            <a class="nav-link" href="{% url 'flags:elements-list' %}">Элементы флагов</a>
           </li>
+
           <!--
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
@@ -77,10 +77,12 @@
                     {% endif %}
                     -->
         </ul>
+        <!--
         <form class="form-inline">
           <input class="form-control mr-sm-2 top-search" type="search" placeholder="Испания" aria-label="Испания">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
         </form>
+        -->
       </div>
     </nav>
   </div>
