--- a/app/static/css/project.css
+++ b/app/static/css/project.css
@@ -8731,6 +8731,9 @@ section.main {
       -ms-flex: 1 0 auto;
           flex: 1 0 auto; }
 
+.nav, .navbar {
+  font-family: 'pfbeausanspro', 'Trebuchet MS', Arial, sans-serif; }
+
 h1,
 h2,
 h3,
@@ -8778,6 +8781,10 @@ img {
 img.logo {
   width: 150px; }
 
+.navbar-brand {
+  padding-right: 48px;
+  padding-right: 3rem; }
+
 .form-control.mr-sm-2.top-search {
   width: 120px; }
 
@@ -8792,6 +8799,13 @@ img.logo {
 img.main-flag {
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
+
+img.dl-example {
+  border: 1px solid #adacac; }
+
+.second-menu {
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee; }
 
 .draft {
   background-color: #eee; }
