--- a/app/templates/partials/_h2.html
+++ b/app/templates/partials/_h2.html
@@ -1,8 +1,8 @@
-<div class="pt-3">
+<div class="pt-3 pt-xl-5">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2 class="py-3">{{h2}}</h2>
+        <h2>{{h2}}</h2>
       </div>
     </div>
   </div>
